// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with input 1`] = `
<div
  className="field"
>
  <label
    htmlFor="inputId"
  >
    Test
  </label>
  <input
    id="inputId"
    name="inputId"
    required={true}
    type="text"
    value="14400"
  />
</div>
`;

exports[`renders correctly with select 1`] = `
<div
  className="field"
>
  <label
    htmlFor="inputId"
  >
    Test
  </label>
  <select
    id="inputId"
    name="inputId"
    required={true}
  >
    <option
      value="1"
    >
      1
    </option>
    <option
      value="2"
    >
      2
    </option>
  </select>
</div>
`;
